fix(Dropdowntrigger): On firefox the label block the dropdown trigger

--- a/src/FieldToken/index.scss
+++ b/src/FieldToken/index.scss
@@ -18,6 +18,7 @@
   .narmi-icon-x {
     cursor: pointer;
     display: inline-flex;
+    pointer-events: all;
     justify-content: center;
     align-items: center;
     height: var(--space-s);
